--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/CraigPhillips/euler-project/issues"
   },
-  "homepage": "https://github.com/CraigPhillips/euler-project#readme"
+  "homepage": "https://github.com/CraigPhillips/euler-project#readme",
+  "devDependencies": {
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
+  },
+  "dependencies": {
+    "bunyan": "^1.8.12",
+    "yargs": "^12.0.1"
+  }
 }
