adds linting script and note about it to the README

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "euler": "node --experimental-modules --no-warnings src",
+    "lint": "eslint src/**/**.mjs",
     "test": "jest --verbose",
     "test-changed": "jest -o --verbose"
   },
