--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "euler-project",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.mjs",
   "scripts": {
     "euler": "node --experimental-modules --no-warnings src",
     "lint": "eslint src/**/**.mjs",
